--- a/index.html
+++ b/index.html
@@ -69,13 +69,63 @@
           <button data-modal-open type="button" class="button hero-button">
             Замовити послугу
           </button>
+
+          <!-- Modal -->
+
           <div data-modal class="backdrop is-hidden">
             <div class="modal">
               <button data-modal-close class="modal-button button">
-                <svg width="11" height="11">
+                <svg width="11" height="11" class="modal-icon">
                   <use href="./img/icons.svg#icon-close"></use>
                 </svg>
               </button>
+              <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+              <form class="form-modal">
+                <div class="form-field">
+                  <label for="name" class="form-label">Ім'я</label>
+                  <div class="input-icon">
+                    <input type="text" class="form-input" id="name">
+                    <svg width="18" height="18" class="form-icon">
+                      <use href="./img/icons.svg#icon-name" ></use>
+                    </svg>
+                  </div>
+                </div>
+                <div class="form-field">
+                  <label for="tel" class="form-label">Телефон</label>
+                  <div class="input-icon">
+                    <input type="tel" class="form-input" id="tel">
+                    <svg width="18" height="18" class="form-icon">
+                      <use href="./img/icons.svg#icon-phone" ></use>
+                    </svg>
+                  </div>
+                </div>
+                <div class="form-field">
+                  <label for="email" class="form-label">Пошта</label>
+                 <div class="input-icon">
+                   <input type="email" class="form-input" id="email">
+                   <svg width="18" height="18" class="form-icon">
+                     <use href="./img/icons.svg#icon-email" ></use>
+                   </svg>
+                 </div>
+                </div>
+                <div class="form-field">
+                  <label for="comment" class="form-label">Коментар</label>
+                  <textarea name="comment" class="form-input form-comment" id="comment" rows="20" placeholder="Введіть текст"></textarea>
+                </div>
+                <div class="form-license">                  
+                  <input type="checkbox" id="license" class="license-checkbox">
+                  <label for="license" class="license-label">Погоджуюся з розсилкою та приймаю&nbsp<span><a href="">Умови
+                    договору</a></span>
+                    <svg width="16" height="15" class="license-icon">
+                      <use href="./img/icons.svg#icon-checkbox"></use>
+                    </svg>
+                    <svg width="16" height="15" class="license-icon2">
+                      <use href="./img/icons.svg#icon-checkbox2"></use>
+                    </svg>
+                  </label>                  
+                </div>                
+              </form>
+              <input type="submit" value="Відправити" class="submit-button">
             </div>
           </div>
         </div>
@@ -388,7 +438,7 @@
           </a>
           <address>
             <ul class="address-list list">
-              <li class="item">
+              <li class="item address-item">
                 <a
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
@@ -443,6 +493,19 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!-- Subscribe -->
+        <div class="subscribe">
+          <form class="subscribe-form">            
+            <label class="subscribe-label" for="subscribe">Підпишіться на розсилку</label>              
+           <div class="subscribe-container">
+             <input id="subscribe" type="email" name="email" class="subscribe-email">            
+             <input type="submit" value="Підписатися" class="subscribe-button button submit-button">
+             <svg class="subscribe-icon" width="24" height="24">
+              <use href="./img/icons.svg#icon-send"></use>
+             </svg>
+           </div>
+          </form>
         </div>
       </div>
     </footer>
