--- a/portfolio.html
+++ b/portfolio.html
@@ -267,7 +267,7 @@
           </a>
           <address>
             <ul class="address-list list">
-              <li class="item">
+              <li class="item address-item">
                 <a
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
@@ -322,6 +322,19 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!-- Subscribe -->
+        <div class="subscribe">
+          <form class="subscribe-form">            
+            <label class="subscribe-label" for="subscribe">Підпишіться на розсилку</label>              
+           <div class="subscribe-container">
+             <input id="subscribe" type="email" name="email" class="subscribe-email">            
+             <input type="submit" value="Підписатися" class="subscribe-button button submit-button">
+             <svg class="subscribe-icon" width="24" height="24">
+              <use href="./img/icons.svg#icon-send"></use>
+             </svg>
+           </div>
+          </form>
         </div>
       </div>
     </footer>
