--- a/portfolio.html
+++ b/portfolio.html
@@ -325,15 +325,26 @@
         </div>
         <!-- Subscribe -->
         <div class="subscribe">
-          <form class="subscribe-form">            
-            <label class="subscribe-label" for="subscribe">Підпишіться на розсилку</label>              
-           <div class="subscribe-container">
-             <input id="subscribe" type="email" name="email" class="subscribe-email">            
-             <input type="submit" value="Підписатися" class="subscribe-button button submit-button">
-             <svg class="subscribe-icon" width="24" height="24">
-              <use href="./img/icons.svg#icon-send"></use>
-             </svg>
-           </div>
+          <form class="subscribe-form">
+            <label class="subscribe-label" for="subscribe"
+              >Підпишіться на розсилку</label
+            >
+            <div class="subscribe-container">
+              <input
+                id="subscribe"
+                type="email"
+                name="email"
+                class="subscribe-email"
+              />
+              <input
+                type="submit"
+                value="Підписатися"
+                class="subscribe-button button submit-button"
+              />
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./img/icons.svg#icon-send"></use>
+              </svg>
+            </div>
           </form>
         </div>
       </div>
