--- a/index.html
+++ b/index.html
@@ -84,48 +84,60 @@
                 <div class="form-field">
                   <label for="name" class="form-label">Ім'я</label>
                   <div class="input-icon">
-                    <input type="text" class="form-input" id="name">
+                    <input type="text" class="form-input" id="name" />
                     <svg width="18" height="18" class="form-icon">
-                      <use href="./img/icons.svg#icon-name" ></use>
+                      <use href="./img/icons.svg#icon-name"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="form-field">
                   <label for="tel" class="form-label">Телефон</label>
                   <div class="input-icon">
-                    <input type="tel" class="form-input" id="tel">
+                    <input type="tel" class="form-input" id="tel" />
                     <svg width="18" height="18" class="form-icon">
-                      <use href="./img/icons.svg#icon-phone" ></use>
+                      <use href="./img/icons.svg#icon-phone"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="form-field">
                   <label for="email" class="form-label">Пошта</label>
-                 <div class="input-icon">
-                   <input type="email" class="form-input" id="email">
-                   <svg width="18" height="18" class="form-icon">
-                     <use href="./img/icons.svg#icon-email" ></use>
-                   </svg>
-                 </div>
+                  <div class="input-icon">
+                    <input type="email" class="form-input" id="email" />
+                    <svg width="18" height="18" class="form-icon">
+                      <use href="./img/icons.svg#icon-email"></use>
+                    </svg>
+                  </div>
                 </div>
                 <div class="form-field">
                   <label for="comment" class="form-label">Коментар</label>
-                  <textarea name="comment" class="form-input form-comment" id="comment" rows="20" placeholder="Введіть текст"></textarea>
+                  <textarea
+                    name="comment"
+                    class="form-input form-comment"
+                    id="comment"
+                    rows="20"
+                    placeholder="Введіть текст"
+                  ></textarea>
                 </div>
-                <div class="form-license">                  
-                  <input type="checkbox" id="license" class="license-checkbox">
-                  <label for="license" class="license-label">Погоджуюся з розсилкою та приймаю&nbsp<span><a href="">Умови
-                    договору</a></span>
+                <div class="form-license">
+                  <input
+                    type="checkbox"
+                    id="license"
+                    class="license-checkbox"
+                  />
+                  <label for="license" class="license-label"
+                    >Погоджуюся з розсилкою та приймаю&nbsp<span
+                      ><a href="">Умови договору</a></span
+                    >
                     <svg width="16" height="15" class="license-icon">
                       <use href="./img/icons.svg#icon-checkbox"></use>
                     </svg>
                     <svg width="16" height="15" class="license-icon2">
                       <use href="./img/icons.svg#icon-checkbox2"></use>
                     </svg>
-                  </label>                  
-                </div>                
+                  </label>
+                </div>
               </form>
-              <input type="submit" value="Відправити" class="submit-button">
+              <input type="submit" value="Відправити" class="submit-button" />
             </div>
           </div>
         </div>
@@ -496,15 +508,26 @@
         </div>
         <!-- Subscribe -->
         <div class="subscribe">
-          <form class="subscribe-form">            
-            <label class="subscribe-label" for="subscribe">Підпишіться на розсилку</label>              
-           <div class="subscribe-container">
-             <input id="subscribe" type="email" name="email" class="subscribe-email">            
-             <input type="submit" value="Підписатися" class="subscribe-button button submit-button">
-             <svg class="subscribe-icon" width="24" height="24">
-              <use href="./img/icons.svg#icon-send"></use>
-             </svg>
-           </div>
+          <form class="subscribe-form">
+            <label class="subscribe-label" for="subscribe"
+              >Підпишіться на розсилку</label
+            >
+            <div class="subscribe-container">
+              <input
+                id="subscribe"
+                type="email"
+                name="email"
+                class="subscribe-email"
+              />
+              <input
+                type="submit"
+                value="Підписатися"
+                class="subscribe-button button submit-button"
+              />
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./img/icons.svg#icon-send"></use>
+              </svg>
+            </div>
           </form>
         </div>
       </div>
