--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     class="license-checkbox"
                   />
                   <label for="license" class="license-label"
-                    >Погоджуюся з розсилкою та приймаю&nbsp<span
+                    >Погоджуюся з розсилкою та приймаю&nbsp;<span
                       ><a href="">Умови договору</a></span
                     >
                     <svg width="16" height="15" class="license-icon">
