--- a/portfolio.html
+++ b/portfolio.html
@@ -335,15 +335,17 @@
                 type="email"
                 name="email"
                 class="subscribe-email"
+                placeholder="E-mail"
               />
-              <input
+              <button
                 type="submit"
-                value="Підписатися"
                 class="subscribe-button button submit-button"
-              />
-              <svg class="subscribe-icon" width="24" height="24">
-                <use href="./img/icons.svg#icon-send"></use>
-              </svg>
+              >
+                Підписатися
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-send"></use>
+                </svg>
+              </button>
             </div>
           </form>
         </div>
